[package]
name = "tech_tree_serde"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
tech_tree = { path = "../tech_tree" }

[dev-dependencies]
tempfile = "3.2"
